--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <button class="hero__button btn" type="button" data-modal-open>Заказать услугу</button>
       </div>
     </section>
-    <section class="section">
+    <section class="section-features section">
       <div class="container">
         <h2 class="section__title visually-hidden">Особенности</h2>
         <ul class="features">
@@ -188,9 +188,9 @@
         </ul>
       </div>
     </section>
-    <section class="section section--other-background">
+    <section class=" section--other-background">
       <div class="container team">
-        <h2 class="section__title">Наша команда</h2>
+        <h2 class="section__title--team">Наша команда</h2>
         <ul class="team__list">
           <li class="team__item">
             <picture class="team__img">
@@ -200,7 +200,7 @@
             ./images/hero_images/team/tablet/team-member-1@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-1.jpg 1x,
                 ./images/hero_images/team/mobile/team-member-1@2x.jpg 2x
-                " meadia="(min-width: 480px)" />
+                " media="(min-width: 480px)" />
               <img src="./images/hero_images/team-member-1.jpg" alt="Игорь Демьяненко" />
             </picture>
             <div class="team__box">
@@ -245,7 +245,7 @@
               <source srcset="./images/hero_images/team/tablet/team-member-2.jpg 1x,
             ./images/hero_images/team/tablet/team-member-2@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-2.jpg 1x,
-            ./images/hero_images/team/mobile/team-member-2@2x.jpg 2x" meadia="(min-width: 480px)" />
+            ./images/hero_images/team/mobile/team-member-2@2x.jpg 2x" media="(min-width: 480px)" />
               <img src="./images/hero_images/team-member-2.jpg" alt="Ольга Репина" />
             </picture>
             <div class="team__box">
@@ -291,7 +291,7 @@
             ./images/hero_images/team/tablet/team-member-3@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-3.jpg 1x,
                 ./images/hero_images/team/mobile/team-member-3@2x.jpg 2x
-                " meadia="(min-width: 480px)" />
+                " media="(min-width: 480px)" />
               <img src="./images/hero_images/team-member-3.jpg" alt="Николай Тарасов" />
             </picture>
             <div class="team__box">
@@ -337,7 +337,7 @@
             ./images/hero_images/team/tablet/team-member-4@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-4.jpg 1x,
                 ./images/hero_images/team/mobile/team-member-4@2x.jpg 2x
-                " meadia="(min-width: 480px)" />
+                " media="(min-width: 480px)" />
               <img src="./images/hero_images/team-member-4.jpg" alt="Михаил Ермаков" />
             </picture>
             <div class="team__box">
@@ -430,7 +430,6 @@
   </main>
   <footer class="footer">
     <div class="container footer-container">
-      
         <div class="footer__addresses">
           <a href="" class="logotype__footer">
               Web<span class="logotype__footer-white" lang="en">Studio</span>
@@ -551,7 +550,6 @@
           <label class="modal-form-checkbox" for="terms-of-use">
             <span>Соглашаюсь с рассылкой и принимаю <a href="" class="acceptance-link"> Условия договора</a></span>
           </label>
-
         </div>
         <button type="submit" class="modal-button">Отправить</button>
       </form>
