--- a/portfolio.html
+++ b/portfolio.html
@@ -17,74 +17,74 @@
 </head>
 
 <body>
-<header class="header header-border">
-			<div class="flex-nav container">
+  <header class="header header-border">
+    <div class="flex-nav container">
       <a href="" class="logotype">
-          Web<span class="logotype__dark" lang="en">Studio</span></a>
-				<div class="menu-container js-menu-container" id="mobile-menu">
-					<div class="all-nav">
-						<button class="menu-button-close js-close-menu" type="button">
-							<svg width="40" height="40" aria-label="Переключатель мобильного меню">
-								<use class="menu-button-close__icon-close" href="./images/sprite_images/icons.svg#icon-close_mob"></use>
-							</svg>
-						</button>
+        Web<span class="logotype__dark" lang="en">Studio</span></a>
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <div class="all-nav">
+          <button class="menu-button-close js-close-menu" type="button">
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="menu-button-close__icon-close" href="./images/sprite_images/icons.svg#icon-close_mob"></use>
+            </svg>
+          </button>
 
-						<nav class="left-nav">
-							<ul class="left-nav-menu">
-								<li class="list menu-item">
-									<a href="./index.html" class="link menu-item__text">Студия</a>
-								</li>
-								<li class="list menu-item">
-									<a href="./portfolio.html" class="link menu-item__text menu-item__text--current current">Портфолио</a>
-								</li>
-								<li class="list menu-item">
-									<a href="" class="link menu-item__text">Контакты</a>
-								</li>
-							</ul>
-						</nav>
-						<div class="menu-bottom">
-							<ul class="right-nav">
-								<li class="list contact-item">
-									<a href="mailto:info@devstudio.com" class="link contact-mail">
-										<svg class="contact-mail__icon" width="16" height="12">
-											<use href="./images/sprite_images/icons.svg#icon-envelope"></use>
-										</svg>
-										info@devstudio.com
-									</a>
-								</li>
-								<li class="list contact-item">
-									<a href="tel:+380961111111" class="link contact-tel">
-										<svg class="contact-tel__icon" width="10" height="16">
-											<use href="./images/sprite_images/icons.svg#icon-smartphone"></use>
-										</svg>
-										+38 096 111 11 11
-									</a>
-								</li>
-							</ul>
-							<ul class="menu-socials list">
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">Instagram</a>
-								</li>
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">Twitter</a>
-								</li>
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">Facebook</a>
-								</li>
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">LinkedIn</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-					<svg width="40" height="40" aria-label="Вызов меню">
-						<use class="menu-button__icon-menu" href="./images/sprite_images/icons.svg#icon-menu_mob"></use>
-					</svg>
-				</button>
-			</div>
-		</header>
+          <nav class="left-nav">
+            <ul class="left-nav-menu">
+              <li class="list menu-item">
+                <a href="./index.html" class="link menu-item__text">Студия</a>
+              </li>
+              <li class="list menu-item">
+                <a href="./portfolio.html" class="link menu-item__text menu-item__text--current current">Портфолио</a>
+              </li>
+              <li class="list menu-item">
+                <a href="" class="link menu-item__text">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="menu-bottom">
+            <ul class="right-nav">
+              <li class="list contact-item">
+                <a href="mailto:info@devstudio.com" class="link contact-mail">
+                  <svg class="contact-mail__icon" width="16" height="12">
+                    <use href="./images/sprite_images/icons.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="list contact-item">
+                <a href="tel:+380961111111" class="link contact-tel">
+                  <svg class="contact-tel__icon" width="10" height="16">
+                    <use href="./images/sprite_images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+            <ul class="menu-socials list">
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">Instagram</a>
+              </li>
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">Twitter</a>
+              </li>
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">Facebook</a>
+              </li>
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg width="40" height="40" aria-label="Вызов меню">
+          <use class="menu-button__icon-menu" href="./images/sprite_images/icons.svg#icon-menu_mob"></use>
+        </svg>
+      </button>
+    </div>
+  </header>
   <main>
     <section class="section">
       <h1 class="section__title visually-hidden">Примеры проектов</h1>
@@ -110,7 +110,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-1.jpg" width="370" height="294" alt="Ноутбук с проектом" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-1.jpg 1x,
+            ./images/portfolio_images/desktop/img-1@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-1.jpg 1x,
+            ./images/portfolio_images/tablet/img-1@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-1.jpg 1x,
+            ./images/portfolio_images/mobile/img-1@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-1.jpg" width="370" height="294" alt="Ноутбук с проектом" />
+                </picture>
                 <p class="portfolio__tumb">Технокряк это современная площадка распространения коронавируса.
                   Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
               </div>
@@ -123,7 +131,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-2.jpg" width="370" height="294" alt="Момент матча" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-2.jpg 1x,
+            ./images/portfolio_images/desktop/img-2@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-2.jpg 1x,
+            ./images/portfolio_images/tablet/img-2@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-2.jpg 1x,
+            ./images/portfolio_images/mobile/img-2@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-2.jpg" width="370" height="294" alt="Момент матча" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -137,7 +153,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-3.jpg" width="370" height="294" alt="Логотип с рыбой" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-3.jpg 1x,
+            ./images/portfolio_images/desktop/img-3@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-3.jpg 1x,
+            ./images/portfolio_images/tablet/img-3@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-3.jpg 1x,
+            ./images/portfolio_images/mobile/img-3@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-3.jpg" width="370" height="294" alt="Логотип с рыбой" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -149,7 +173,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-4.jpg" width="370" height="294" alt="Фотография наушников" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-4.jpg 1x,
+            ./images/portfolio_images/desktop/img-4@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-4.jpg 1x,
+            ./images/portfolio_images/tablet/img-4@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-4.jpg 1x,
+            ./images/portfolio_images/mobile/img-4@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-4.jpg" width="370" height="294" alt="Фотография наушников" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -161,7 +193,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-5.jpg" width="370" height="294" alt="Фотография коробок" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-5.jpg 1x,
+            ./images/portfolio_images/desktop/img-5@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-5.jpg 1x,
+            ./images/portfolio_images/tablet/img-5@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-5.jpg 1x,
+            ./images/portfolio_images/mobile/img-5@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-5.jpg" width="370" height="294" alt="Фотография коробок" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -173,7 +213,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-6.jpg" width="370" height="294" alt="Монитор с картой мира" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-6.jpg 1x,
+            ./images/portfolio_images/desktop/img-6@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-6.jpg 1x,
+            ./images/portfolio_images/tablet/img-6@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-6.jpg 1x,
+            ./images/portfolio_images/mobile/img-6@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-6.jpg" width="370" height="294" alt="Монитор с картой мира" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -185,7 +233,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-7.jpg" width="370" height="294" alt="Разворот книги" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-7.jpg 1x,
+            ./images/portfolio_images/desktop/img-7@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-7.jpg 1x,
+            ./images/portfolio_images/tablet/img-7@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-7.jpg 1x,
+            ./images/portfolio_images/mobile/img-7@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-7.jpg" width="370" height="294" alt="Разворот книги" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -199,7 +255,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-8.jpg" width="370" height="294" alt="Фотография этикетки" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-8.jpg 1x,
+            ./images/portfolio_images/desktop/img-8@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-8.jpg 1x,
+            ./images/portfolio_images/tablet/img-8@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-8.jpg 1x,
+            ./images/portfolio_images/mobile/img-8@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-8.jpg" width="370" height="294" alt="Фотография этикетки" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -211,7 +275,15 @@
           <li class="portfolio__item">
             <a href="" class="portfolio__box">
               <div class="portfolio__wrap">
-                <img src="./images/portfolio_images/img-9.jpg" width="370" height="294" alt="Работа за ноутбуком" />
+                <picture class="portfolio__img">
+                  <source srcset="./images/portfolio_images/desktop/img-9.jpg 1x,
+            ./images/portfolio_images/desktop/img-9@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <source srcset="./images/portfolio_images/tablet/img-9.jpg 1x,
+            ./images/portfolio_images/tablet/img-9@2x.jpg 2x" media="(min-width: 768px)" />
+                  <source srcset="./images/portfolio_images/mobile/img-9.jpg 1x,
+            ./images/portfolio_images/mobile/img-9@2x.jpg 2x" media="(min-width: 480px)" />
+                  <img src="./images/portfolio_images/img-9.jpg" width="370" height="294" alt="Работа за ноутбуком" />
+                </picture>
                 <p class="portfolio__tumb"></p>
               </div>
               <div class="portfolio__description">
@@ -295,7 +367,8 @@
         </div>
     </div>
   </footer>
-  		<script src="./js/mobile-menu.js"></script>
+
+  <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
